--- a/index.html
+++ b/index.html
@@ -3,34 +3,80 @@
 <head>
     <meta charset="UTF-8" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
 </head>
 
 <body>
-	<div class="wrapper animated bounceInLeft" id="navwrapper">
-	  <header>
-	    <div class="container">
-            <div id="title">
-                <h1>Hello.. My Name Is Nathan Haskell</h1>
+    <div class="wrapper animated bounceInLeft" id="navwrapper">
+        <header>
+            <div class="container">
+                <div id="hamburger" class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
-	      <div id="hamburger" class="nav-toggle">
-	        <span></span>
-	        <span></span>
-	        <span></span>
-	      </div>
-	    </div>
-	  </header>
-	</div>
-	<div class="off-nav animated bounceInLeft">
-	  <nav>
-	    <a href="#">Link</a>
-	    <a href="#">Link</a>
-	    <a href="#">Link</a>
-	    <a href="#">Link</a>
-	  </nav>
-	</div>
-   
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="js/nav.js"></script>
+        </header>
+    </div>
+    <div class="off-nav animated bounceInLeft">
+        <nav>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </nav>
+    </div>
+    <div class="home">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <p class="brand navbar-brand scroll">Goode Development</p>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="#homey">Home</a></li>
+                        <li><a href="#abou">About</a></li>
+                        <li><a href="#porty">Portfolio</a></li>
+                        <li><a href="#conty">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
+
+        <!--End Navbar-->
+        <!--header -->
+        <a name="homey"> </a>
+        <div id="intro">
+            <div class="jumbotron">
+                <h1 class="text-center" id="head">Nathan Haskell</h1>
+                <p class="text-center" id="header">Full Stack Web Developer</p>
+            </div>
+        </div>
+        <div class="foot">
+            <h2 class="text-center">Contact me:</h2>
+            <div class="text-center">
+                <div class="icons">
+                    <a href="http://facebook.com"><i class="fa fa-facebook-official fa-5x fa-fw"></i> </a>
+                    <a href="http://github.com"><i class="fa fa-github-square fa-5x fa-fw"></i> </a>
+                    <a href="http://github.com"><i class="fa fa-codepen fa-5x fa-fw"></i> </a>
+                    <a href="http://github.com"><i class="fa fa-linkedin-square fa-5x fa-fw"></i></a>
+                    <a href="http://github.com"><i class="fa fa-envelope fa-5x fa-fw"></i></a>
+                </div>
+            </div>
+            <!--copyright -->
+            <footer class="text-center">
+                <small> &reg NBHaskell Development 2016. All Rights Reserved</small>
+            </footer>
+        </div>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="js/nav.js"></script>
 </body>
 </html>
