home and about updated. responsive needs work

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div> <!-- .row -->
         </div> <!-- container-fluid -->
     </div> 
-    <div class="container-fluid" id="stackIcons">
-
+    <div class="container-fluid" id="stackIcons">   
+        <img src="images/fullStackIcons.png" />
     </div>
     <div class="about" id="about">
         <div class="container">
@@ -72,7 +72,8 @@
                         </p>
                     </div> <!-- .col-md-6 -->
                     <div class="col-md-6">
-                        <img class="about-img img-responsive img-circle" src="http://freedomcobra.com/asset/matthew.jpg">
+                        <img class="about-img img-responsive img-circle" img src="images/IMG_2461.jpg"/>
+                      
                     </div> <!-- .col-md-6 -->
                 </div> <!-- .about-content -->
             </div> <!-- .row -->
