responsive is taking shape, removed clutter, restarting sections from square one.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
@@ -29,7 +30,6 @@
             </div> <!--.navbar-collapse-->
         </div> <!--.container-fluid -->
     </nav>
-
     <!-- Home -->
     <div class="landing-page" id="home">
         <div class="container-fluid">
@@ -37,6 +37,8 @@
                 <div class="col-md-12">
                     <div class="landing-title">
                         <h1>Nathan B Haskell</h1>
+                        <h4>Designer</h4>
+                        <h4>&</h4>
                         <h4>Full Stack Developer</h4>
                         <ul class="list-inline social-buttons">
                             <a href="http://facebook.com"><i class="fa fa-facebook-official fa-4x fa-fw"></i> </a>
@@ -49,96 +51,13 @@
                 </div> <!-- .col-md-12 -->
             </div> <!-- .row -->
         </div> <!-- container-fluid -->
-    </div> 
-    <div class="container-fluid" id="stackIcons">   
-        <img src="images/fullStackIcons.png" />
+            <i class="fa fa-angle-double-down fa-5x fa-fw" aria-hidden="true" id="downArrow"></i>
     </div>
-    <div class="about" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-content">
-                    <div class="col-md-6">
-                        <h2>What I Do</h2>
-                        <p>
-                            I am a web designer and developer keen on making elegant development solutions. I like to use modern practices to craft modular, sensible code without sacrificing anything!
-                        </p>
-                        <p>
-                            My Language Range<br />
-                            HTML5, CSS3, jQuery, JavaScript, Bootstrap3, PHP
-                        </p>
-                        <p>
-                            My Tool Belt <br />
-                            Wordpress, Drupal, Git, SASS, node.js
-                        </p>
-                    </div> <!-- .col-md-6 -->
-                    <div class="col-md-6">
-                        <img class="about-img img-responsive img-circle" img src="images/IMG_2461.jpg"/>
-                      
-                    </div> <!-- .col-md-6 -->
-                </div> <!-- .about-content -->
-            </div> <!-- .row -->
-        </div> <!-- .container -->
-    </div> <!-- .about -->
-    <div class="portfolio" id="portfolio">
-        <div class="background-shade">
-            <div class="container">
-                <div class="row">
-                    <div class="portfolio-content">
-                        <div class="col-md-12">
-                            <h2 class="text-center">My Portfolio</h2>
-                        </div> <!-- col-md-12 -->
-                        <div class="col-sm-6 col-md-4 post">
-                            <h3>Heading</h3>
-                            <img class='img-responsive' src='http://i.imgur.com/jESF2.jpg'>
-                            <p>
-                                Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
-                            </p>
-                        </div> <!-- col-md-4 -->
-                        <div class="col-sm-6 col-md-4 post">
-                            <h3>Heading</h3>
-                            <img class='img-responsive' src='http://i.imgur.com/jESF2.jpg'>
-                            <p>
-                                Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
-                            </p>
-                        </div> <!-- col-md-4 -->
-                        <div class="col-sm-6 col-md-4 post">
-                            <h3>Heading</h3>
-                            <img class='img-responsive' src='http://i.imgur.com/jESF2.jpg'>
-                            <p>
-                                Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
-                            </p>
-                        </div> <!-- col-md-4 -->
-                    </div> <!-- portfolio-content -->
-                </div> <!-- .row -->
-            </div> <!-- .container -->
-        </div> <!-- .background-shade -->
-    </div> <!-- .portfolio -->
-    <div class="contact" id="contact">
-        <div class="background-shade">
-            <div class='container'>
-                <div class="row">
-                    <div class="contact-content">
-                        <div class="col-sm-12 col-md-6 pull-left">
-                            <h2>Contact me</h2>
-                            <p>I can be reached at <span><a href="https://freedomcobra.com">Freedomcobra.com</a></span></p>
-                        </div> <!-- .col-md-6 -->
-                        <div class='col-sm-12 col-md-6 pull-right'>
-                            <ul class="list-inline social-buttons">
-                                <li><a class='btn btn-lg btn-default' href='#' target='_blank'>Twitter</a></li>
+    <div class="stack-icons">
+        <div class="container-fluid">
 
-                                <li><a class="btn btn-lg btn-default" href="#" target="_blank">Github</a></li>
-
-                                <li><a class='btn btn-lg btn-default' href='#' target='_blank'>LinkedIn</a></li>
-
-                                <li><a class='btn btn-lg btn-default' href='#' target='_blank'>Free Code Camp</a></li>
-                            </ul>
-                        </div> <!-- col-md-6 -->
-                    </div> <!-- .contact-content -->
-                </div> <!-- .row -->
-            </div> <!-- .container -->
-        </div><!-- background-shade -->
-    </div> <!-- .contact -->
-    <a name="conty"></a>
+        </div>
+    </div>
     <div class="foot">
         <h2 class="text-center">Contact me:</h2>
         <div class="text-center">
