Resolved bootstrap sizing issue/ added stack icons/responsive is looking better

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about" style="color:white;"><span class="glyphicon glyphicon-user"></span> About</a></li>
                     <li><a href="#portfolio" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
-                    <li><a href="#contact" style="color:white;"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
+                    <li><a href="#contact" style="color:white; margin-right:50px;"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
                 </ul>
             </div> <!--.navbar-collapse-->
         </div> <!--.container-fluid -->
@@ -52,11 +52,15 @@
                 </div> <!-- .col-md-12 -->
             </div> <!-- .row -->
         </div> <!-- container-fluid -->
-            <i class="fa fa-angle-double-down fa-5x fa-fw" aria-hidden="true" id="downArrow"></i>
+        <div class="container-fluid" id="downArrow" >
+            <img class="img-responsive" src="images/downArrow2.png"/>
+        </div>
     </div>
     <div class="stack-icons">
         <div class="container-fluid">
-
+            <div class="row">
+                <img class="img-responsive" src="images/stackIcons.svg" />
+            </div>
         </div>
     </div>
     <div class="foot">
