committing before working on paralax sections for safety.. safety first

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <div class="stack-icons">
         <div class="container-fluid">
             <div class="row">
+                <h3>These are a few of my favorite things</h3>
                 <img class="img-responsive" src="images/stackIcons.svg" />
             </div>
         </div>
