--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <script src="bower_components/bower-skrollr/skrollr.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <img src="images/HaskellLogo.png" id="logo"/>
+                <img src="images/HaskellLogo.png" id="logo" />
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -32,38 +33,81 @@
         </div> <!--.container-fluid -->
     </nav>
     <!-- Home -->
-    <div class="landing-page" id="home">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="landing-title">
-                        <h1>Nathan B Haskell</h1>
-                        <h4>Designer</h4>
-                        <h4>&</h4>
-                        <h4>Full Stack Developer</h4>
-                        <ul class="list-inline social-buttons">
-                            <a href="http://facebook.com"><i class="fa fa-facebook-official fa-4x fa-fw"></i> </a>
-                            <a href="http://github.com"><i class="fa fa-github-square fa-4x fa-fw"></i> </a>
-                            <a href="http://github.com"><i class="fa fa-codepen fa-4x fa-fw"></i> </a>
-                            <a href="http://github.com"><i class="fa fa-linkedin-square fa-4x fa-fw"></i></a>
-                            <a href="http://github.com"><i class="fa fa-envelope fa-4x fa-fw"></i></a>
-                        </ul>
-                    </div> <!-- landing-title -->
-                </div> <!-- .col-md-12 -->
-            </div> <!-- .row -->
-        </div> <!-- container-fluid -->
-        <div class="container-fluid" id="downArrow" >
-            <img class="img-responsive" src="images/downArrow2.png"/>
+    <section id="slide-1" class="homeSlide">
+        <div class="bcg"
+             data-center="background-position: 50% 0px;"
+             data-top-bottom="background-position: 50% -100px;"
+             data-anchor-target="#slide-1">
+            <div class="hsContainer">
+                <div class="hsContent"
+                     data-bottom-top="bottom: 50px; opacity: 1"
+                     data-top="bottom: 1200px; opacity: 0"
+                     data-anchor-target="#slide-1 img">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="landing-title">
+                                    <h1>Nathan B Haskell</h1>
+                                    <h4>Designer</h4>
+                                    <h4>&</h4>
+                                    <h4>Full Stack Developer</h4>
+                                    <ul class="list-inline social-buttons">
+                                        <a href="http://facebook.com"><i class="fa fa-facebook-official fa-4x fa-fw"></i> </a>
+                                        <a href="http://github.com"><i class="fa fa-github-square fa-4x fa-fw"></i> </a>
+                                        <a href="http://github.com"><i class="fa fa-codepen fa-4x fa-fw"></i> </a>
+                                        <a href="http://github.com"><i class="fa fa-linkedin-square fa-4x fa-fw"></i></a>
+                                        <a href="http://github.com"><i class="fa fa-envelope fa-4x fa-fw"></i></a>
+                                    </ul>
+                                </div> <!-- landing-title -->
+                            </div> <!-- .col-md-12 -->
+                        </div> <!-- .row -->
+                    </div> <!-- container-fluid -->
+                    <div class="container-fluid" id="downArrow">
+                        <img class="img-responsive" src="images/downArrow2.png" />
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="stack-icons">
+    </section>
+    <!-- stack icons -->
+    <div class="stack-icons"> 
         <div class="container-fluid">
             <div class="row">
                 <h3>These are a few of my favorite things</h3>
                 <img class="img-responsive" src="images/stackIcons.svg" />
             </div>
-        </div>
+        </div> <!-- container-fluid -->
     </div>
+    <!-- About -->
+    <section id="slide-2" class="homeSlide">
+        <div class="bcg"
+             data-center="background-position: 50% 0px;"
+             data-top-bottom="background-position: 50% -100px;"
+             data-anchor-target="#slide-2">
+            <div class="hsContainer">
+                <div class="hsContent"
+                     data-center="opacity: 1"
+                     data-center-top="opacity: 1"
+                     data--100-bottom="opacity: 1;"
+                     data-anchor-target="#slide-2">
+                    <h2>A little about myself</h2>
+                    <p>I hail from the great white north.. Maine to be specific.<br>
+                    Short days and long cold winters didn't forward me as much "outdoorsy"<br>
+                    time as other places, so I spent my time exploring my artistic abilities<br>
+                    through various mediums and tinkering with anything tech related. I knew <br>
+                    early on that I would do one, or a combination of the two professionally.<br>
+                    So that is exactly what I did.  I am a designer, full stack web developer, and <br> 
+                    software engineer by trait.  Now I live in beautiful sunny San Diego, California <br>
+                    with my stunning wife Ryann, who is a San Diego native (woot woot!).
+                    </p>
+                    <p>I am currently available for freelance work so if you have a website or project in mind,<br>
+                    feel free to reach out to me and we can discuss the particulars.<br>
+                    
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="foot">
         <h2 class="text-center">Contact me:</h2>
         <div class="text-center">
@@ -81,5 +125,7 @@
     </footer>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="js/main.js"></script>
+    s
 </body>
 </html>
