paralax complete/sections built out/animations need work/content

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
              data-anchor-target="#slide-1">
             <div class="hsContainer">
                 <div class="hsContent"
-                     data-bottom-top="bottom: 50px; opacity: 1"
-                     data-top="bottom: 1200px; opacity: 0"
+                     data-bottom="bottom: 250px; opacity: 1"
+                     data-top="bottom: 1800px; opacity: 0"
                      data-anchor-target="#slide-1 img">
                     <div class="container-fluid">
                         <div class="row">
@@ -73,7 +73,7 @@
     <div class="stack-icons"> 
         <div class="container-fluid">
             <div class="row">
-                <h3>These are a few of my favorite things</h3>
+                <h3>{ Here are a few of my favorite things }</h3>
                 <img class="img-responsive" src="images/stackIcons.svg" />
             </div>
         </div> <!-- container-fluid -->
@@ -86,24 +86,61 @@
              data-anchor-target="#slide-2">
             <div class="hsContainer">
                 <div class="hsContent"
-                     data-center="opacity: 1"
+                     data-center-bottom="opacity: 0"
                      data-center-top="opacity: 1"
                      data--100-bottom="opacity: 1;"
                      data-anchor-target="#slide-2">
                     <h2>A little about myself</h2>
-                    <p>I hail from the great white north.. Maine to be specific.<br>
-                    Short days and long cold winters didn't forward me as much "outdoorsy"<br>
-                    time as other places, so I spent my time exploring my artistic abilities<br>
-                    through various mediums and tinkering with anything tech related. I knew <br>
-                    early on that I would do one, or a combination of the two professionally.<br>
-                    So that is exactly what I did.  I am a designer, full stack web developer, and <br> 
-                    software engineer by trait.  Now I live in beautiful sunny San Diego, California <br>
-                    with my stunning wife Ryann, who is a San Diego native (woot woot!).
+                    <div class="container-fluid" id="aboutImage">
+                        <img class="img-responsive" src="images/IMG_7884.jpg"/>
+                    </div>
+                    <p>Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br> 
+                       affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br> 
+                       wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br> 
+                       jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br> 
+                       juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br> 
+                       3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br> 
+                       fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
+                       messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
                     </p>
-                    <p>I am currently available for freelance work so if you have a website or project in mind,<br>
-                    feel free to reach out to me and we can discuss the particulars.<br>
-                    
+                    <p>I'm also currently available for freelance work, if you have a website or project in mind<br>
+                    feel free to shoot me a message and we can discuss the particulars.
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="slide-3" class="homeSlide">
+        <div class="bcg"
+             data-center="background-position: 50% 0px;"
+             data-top-bottom="background-position: 50% -100px;"
+             data-bottom-top="background-position: 50% 100px;"
+             data-anchor-target="#slide-3">
+            <div class="hsContainer">
+                <div class="hsContent"
+                     data--50-bottom="opacity: 0;"
+                     data--200-bottom="opacity: 1;"
+                     data-center="opacity: 1"
+                     data-200-top="opacity: 0"
+                     data-anchor-target="#slide-3 h2">
+                    <h2>THIS WILL BE THE PORTFOLIO SECTION</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="slide-4" class="homeSlide">
+        <div class="bcg"
+             data-center="background-position: 50% 0px;"
+             data-top-bottom="background-position: 50% -100px;"
+             data-bottom-top="background-position: 50% 100px;"
+             data-anchor-target="#slide-4">
+            <div class="hsContainer">
+                <div class="hsContent"
+                     data-bottom-top="opacity: 0"
+                     data-25p-top="opacity: 0"
+                     data-top="opacity: 1"
+                     data-anchor-target="#slide-4">
+                    <h2>THIS WILL BE THE CONTACT SECTION</h2>
                 </div>
             </div>
         </div>
@@ -126,6 +163,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/main.js"></script>
-    s
+    
 </body>
 </html>
