--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div> <!-- .row -->
                     </div> <!-- container-fluid -->
                     <div class="container-fluid" id="downArrow">
-                        <img class="img-responsive" src="images/downArrow2.png" />
+                        <img class="img-responsive" src="images/downArrow2.png"/>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
     <div class="stack-icons"> 
         <div class="container-fluid">
             <div class="row">
-                <h3>{ Here are a few of my favorite things }</h3>
+                <h3>{ These are a few of my favorite things }</h3>
                 <img class="img-responsive" src="images/stackIcons.svg" />
             </div>
         </div> <!-- container-fluid -->
@@ -90,10 +90,7 @@
                      data-center-top="opacity: 1"
                      data--100-bottom="opacity: 1;"
                      data-anchor-target="#slide-2">
-                    <h2>A little about myself</h2>
-                    <div class="container-fluid" id="aboutImage">
-                        <img class="img-responsive" src="images/IMG_7884.jpg"/>
-                    </div>
+                    <h2>A little about myself</h2>                   
                     <p>Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br> 
                        affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br> 
                        wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br> 
@@ -121,9 +118,14 @@
                      data--50-bottom="opacity: 0;"
                      data--200-bottom="opacity: 1;"
                      data-center="opacity: 1"
-                     data-200-top="opacity: 0"
+                     data-200-top="opacity: 1"
                      data-anchor-target="#slide-3 h2">
                     <h2>THIS WILL BE THE PORTFOLIO SECTION</h2>
+                    <div class="container-fluid" id="projects">
+                        <div class="thumbnail" id="left"></div>                    
+                        <div class="thumbnail" id="center"></div>
+                        <div class="thumbnail" id="right"></div>                      
+                    </div>
                 </div>
             </div>
         </div>
