--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                         </div> <!-- .row -->
                     </div> <!-- container-fluid -->
                     <div class="container-fluid" id="downArrow">
-                        <img class="img-responsive" src="images/downArrow2.png"/>
+                        <img class="img-responsive" src="images/downArrow2.png" />
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- stack icons -->
-    <div class="stack-icons"> 
+    <div class="stack-icons">
         <div class="container-fluid">
             <div class="row">
                 <h3>{ These are a few of my favorite things }</h3>
@@ -90,18 +90,20 @@
                      data-center-top="opacity: 1"
                      data--100-bottom="opacity: 1;"
                      data-anchor-target="#slide-2">
-                    <h2>A little about myself</h2>                   
-                    <p>Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br> 
-                       affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br> 
-                       wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br> 
-                       jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br> 
-                       juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br> 
-                       3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br> 
-                       fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
-                       messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
+                    <h2>A little about myself</h2>
+                    <p>
+                        Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br>
+                        affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br>
+                        wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br>
+                        jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br>
+                        juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br>
+                        3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br>
+                        fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
+                        messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
                     </p>
-                    <p>I'm also currently available for freelance work, if you have a website or project in mind<br>
-                    feel free to shoot me a message and we can discuss the particulars.
+                    <p>
+                        I'm also currently available for freelance work, if you have a website or project in mind<br>
+                        feel free to shoot me a message and we can discuss the particulars.
                     </p>
                 </div>
             </div>
@@ -122,9 +124,9 @@
                      data-anchor-target="#slide-3 h2">
                     <h2>THIS WILL BE THE PORTFOLIO SECTION</h2>
                     <div class="container-fluid" id="projects">
-                        <div class="thumbnail" id="left"></div>                    
+                        <div class="thumbnail" id="left"></div>
                         <div class="thumbnail" id="center"></div>
-                        <div class="thumbnail" id="right"></div>                      
+                        <div class="thumbnail" id="right"></div>
                     </div>
                 </div>
             </div>
@@ -148,14 +150,14 @@
         </div>
     </section>
     <div class="foot">
-        <h2 class="text-center">Contact me:</h2>
+        <h2 class="text-center"></h2>
         <div class="text-center">
             <div class="icons">
-                <a href="http://facebook.com"><i class="fa fa-facebook-official fa-5x fa-fw"></i> </a>
-                <a href="http://github.com"><i class="fa fa-github-square fa-5x fa-fw"></i> </a>
-                <a href="http://github.com"><i class="fa fa-codepen fa-5x fa-fw"></i> </a>
-                <a href="http://github.com"><i class="fa fa-linkedin-square fa-5x fa-fw"></i></a>
-                <a href="http://github.com"><i class="fa fa-envelope fa-5x fa-fw"></i></a>
+                <a href="http://facebook.com"><i class="fa fa-facebook-official fa-3x fa-fw"></i> </a>
+                <a href="http://github.com"><i class="fa fa-github-square fa-3x fa-fw"></i> </a>
+                <a href="http://github.com"><i class="fa fa-codepen fa-3x fa-fw"></i> </a>
+                <a href="http://github.com"><i class="fa fa-linkedin-square fa-3x fa-fw"></i></a>
+                <a href="http://github.com"><i class="fa fa-envelope fa-3x fa-fw"></i></a>
             </div>
         </div>
     </div>
@@ -165,6 +167,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/main.js"></script>
-    
+
 </body>
 </html>
