updating portfolio section

--- a/index.html
+++ b/index.html
@@ -122,11 +122,26 @@
                      data-center="opacity: 1"
                      data-200-top="opacity: 1"
                      data-anchor-target="#slide-3 h2">
-                    <h2>THIS WILL BE THE PORTFOLIO SECTION</h2>
+                    <h2>PORTFOLIO</h2>
                     <div class="container-fluid" id="projects">
                         <div class="thumbnail" id="left"></div>
                         <div class="thumbnail" id="center"></div>
                         <div class="thumbnail" id="right"></div>
+                            <p>
+                                scenester post-ironic ethical man bun taxidermy. Seitan portland
+                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
+                                juice schlitz kitsch
+                            </p>
+                            <p>
+                                scenester post-ironic ethical man bun taxidermy. Seitan portland
+                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
+                                juice schlitz kitsch
+                            </p>
+                            <p>
+                                scenester post-ironic ethical man bun taxidermy. Seitan portland<
+                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
+                                juice schlitz kitsch
+                            </p>
                     </div>
                 </div>
             </div>
