updated portfolio/artwork section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             </div>
         </div>
     </section>
+    <!--Projects-->
     <section id="slide-3" class="homeSlide">
         <div class="bcg"
              data-center="background-position: 50% 0px;"
@@ -122,7 +123,7 @@
                      data-center="opacity: 1"
                      data-200-top="opacity: 1"
                      data-anchor-target="#slide-3 h2">
-                    <h2>PORTFOLIO</h2>
+                    <h2>PROJECTS</h2>
                     <div class="container-fluid" id="projects">
                         <div class="thumbnail" id="left"></div>
                         <div class="thumbnail" id="center"></div>
@@ -147,6 +148,7 @@
             </div>
         </div>
     </section>
+    <!--ARTWORK-->
     <section id="slide-4" class="homeSlide">
         <div class="bcg"
              data-center="background-position: 50% 0px;"
@@ -159,11 +161,12 @@
                      data-25p-top="opacity: 0"
                      data-top="opacity: 1"
                      data-anchor-target="#slide-4">
-                    <h2>THIS WILL BE THE CONTACT SECTION</h2>
+                    <h2>ART-WORK</h2>
                 </div>
             </div>
         </div>
     </section>
+    <!--FOOTER-->
     <div class="foot">
         <h2 class="text-center"></h2>
         <div class="text-center">
