--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about" style="color:white;"><span class="glyphicon glyphicon-user"></span> About</a></li>
-                    <li><a href="#portfolio" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
+                    <li><a href="file:///C:/Projects/nbhaskell.com/portfolio.html" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
                     <li><a href="#contact" style="color:white; margin-right:50px;"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
                 </ul>
             </div> <!--.navbar-collapse-->
@@ -123,30 +123,50 @@
                      data-center="opacity: 1"
                      data-200-top="opacity: 1"
                      data-anchor-target="#slide-3 h2">
-                    <h2>PROJECTS</h2>
-                    <div class="container-fluid" id="projects">
-                        <div class="thumbnail" id="left"></div>
-                        <div class="thumbnail" id="center"></div>
-                        <div class="thumbnail" id="right"></div>
-                            <p>
-                                scenester post-ironic ethical man bun taxidermy. Seitan portland
-                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
-                                juice schlitz kitsch
-                            </p>
-                            <p>
-                                scenester post-ironic ethical man bun taxidermy. Seitan portland
-                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
-                                juice schlitz kitsch
-                            </p>
-                            <p>
-                                scenester post-ironic ethical man bun taxidermy. Seitan portland<
-                                jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
-                                juice schlitz kitsch
-                            </p>
+                    <h2>PROJECT PORTFOLIO</h2>
+                    <div class="container" id="tourpackages-carousel">
+                        <div class="row">
+                            <div class="col-xs-18 col-sm-6 col-md-3">
+                                <div class="thumbnail">
+                                    <img src="images/rsz_1pawze2.png"/>
+                                    <div class="caption">
+                                        <h4>PAWZE</h4>
+                                        <p>Full stack application. Pawze makes use of SOLID design pattern, OAuth with roles, Stripe subscription API & MP4 video background.</p>     
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-18 col-sm-6 col-md-3">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/500x300" alt="">
+                                    <div class="caption">
+                                        <h4>Thumbnail label</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>                                      
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-18 col-sm-6 col-md-3">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/500x300" alt="">
+                                    <div class="caption">
+                                        <h4>Thumbnail label</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-18 col-sm-6 col-md-3">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/500x300" alt="">
+                                    <div class="caption">
+                                        <h4>Thumbnail label</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- End row -->
+                    </div><!-- End container -->
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <!--ARTWORK-->
     <section id="slide-4" class="homeSlide">
@@ -155,14 +175,13 @@
              data-top-bottom="background-position: 50% -100px;"
              data-bottom-top="background-position: 50% 100px;"
              data-anchor-target="#slide-4">
-            <div class="hsContainer">
-                <div class="hsContent"
-                     data-bottom-top="opacity: 0"
-                     data-25p-top="opacity: 0"
-                     data-top="opacity: 1"
-                     data-anchor-target="#slide-4">
-                    <h2>ART-WORK</h2>
-                </div>
+            <div class="hsContent"
+                 data--50-bottom="opacity: 0;"
+                 data--200-bottom="opacity: 1;"
+                 data-center="opacity: 1"
+                 data-200-top="opacity: 1"
+                 data-anchor-target="#slide-4 h2">
+                <h2>ARTWORK</h2>
             </div>
         </div>
     </section>
