completed projects section and artwork section. just need to add work to last section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#about" style="color:white;"><span class="glyphicon glyphicon-user"></span> About</a></li>
-                    <li><a href="file:///C:/Projects/nbhaskell.com/portfolio.html" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
+                    <li><a href="#portfolio" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
                     <li><a href="#contact" style="color:white; margin-right:50px;"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
                 </ul>
             </div> <!--.navbar-collapse-->
@@ -131,34 +131,34 @@
                                     <img src="images/rsz_1pawze2.png"/>
                                     <div class="caption">
                                         <h4>PAWZE</h4>
-                                        <p>Full stack application. Pawze makes use of SOLID design pattern, OAuth with roles, Stripe subscription API & MP4 video background.</p>     
+                                        <p>Full stack application. Pawze makes use of SOLID design pattern / SQL database / Web API / REST APIs / OAuth with roles / User dashboard / AngularJS & JQuery with animations / Stripe subscription & payment API / MP4 video background.</p>     
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-18 col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img src="http://placehold.it/500x300" alt="">
+                                    <img src="images/rsz_property-manager.png" alt="">
                                     <div class="caption">
-                                        <h4>Thumbnail label</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>                                      
+                                        <h4>PROPERTY MANAGER</h4>
+                                        <p>Full stack application. Property Manager features SQL database with search and filtering / Web API / REST APIs / AngularJS / OAuth with roles for login & registration and user dashboard / Users can set favorite properties and drill down into greater detail.<br /></p>                                      
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-18 col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img src="http://placehold.it/500x300" alt="">
+                                    <img src="images/rsz_food_ninja (1).png" alt="">
                                     <div class="caption">
-                                        <h4>Thumbnail label</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>
+                                        <h4>FOOD NINJA</h4>
+                                        <p>Full stack application. The Food Ninja application uses a complex ERD and Relationship tables / SQL database / Web API / REST APIs / OAuth with roles for login and registration / User dashboard / AngularJS.<br /><br /> </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-18 col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img src="http://placehold.it/500x300" alt="">
+                                    <img src="images/rsz_1memory.png" alt="">
                                     <div class="caption">
-                                        <h4>Thumbnail label</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur</p>
+                                        <h4>MEMORY GAME</h4>
+                                        <p>Front end application. The Memory Game web application is a fun project written in HTML / CSS / Javascript and uses the JQuery component library Sizzle / The app tracks clicks for score and users can reset the current game at any point.</p>
                                     </div>
                                 </div>
                             </div>
@@ -182,6 +182,56 @@
                  data-200-top="opacity: 1"
                  data-anchor-target="#slide-4 h2">
                 <h2>ARTWORK</h2>
+                <div class="container">
+                    <!--Artwork Projects-->
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="images/LuckyNo13.png" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive"src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <!--/.row-->
+                    <!--Artwork Projects-->
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <!--/.row-->
+                </div>
             </div>
         </div>
     </section>
