working on responsive

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <script src="bower_components/bower-skrollr/skrollr.js"></script>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
             </div> <!--.navbar-header-->
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#about" style="color:white;"><span class="glyphicon glyphicon-user"></span> About</a></li>
-                    <li><a href="#portfolio" style="color:white;"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
-                    <li><a href="#contact" style="color:white; margin-right:50px;"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
+                    <li><a href="#about"><span class="glyphicon glyphicon-user"></span> About</a></li>
+                    <li><a href="#portfolio"><span class="glyphicon glyphicon-folder-close"></span> Portfolio</a></li>
+                    <li><a href="#contact" id="navContact"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
                 </ul>
             </div> <!--.navbar-collapse-->
         </div> <!--.container-fluid -->
@@ -254,6 +254,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="bower_components/bower-skrollr/skrollr.js"></script>
 </body>
 </html>
